# Transaction-Cleaning-and-Audit-API

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/config/: rules.json
app/routes/: jobs.py
app/rules/: config.py  validators.py
app/services/: audit.py  processor.py
app/templates/: index.html
data/processed/05648188/: audit.json  summary.json
data/processed/2b448228/: rejected.csv  summary.json
data/processed/45905bfd/: audit.json  cleaned.csv  flagged.csv  rejected.csv  summary.json
data/processed/6b29176e/: summary.json
data/processed/7103d47d/: summary.json
data/processed/78bb348a/: summary.json
data/processed/897141e3/: summary.json
data/processed/8acf838a/: audit.json  summary.json
data/processed/97727a91/: audit.json  cleaned.csv  flagged.csv  summary.json
data/processed/b78d1ba2/: flagged.csv  summary.json
data/processed/e373c099/: summary.json
data/raw/: transactions.csv
tests/: test_api.py  test_processor.py  test_validators.py
transaction_cleaning_api.egg-info/: SOURCES.txt  requires.txt
