[project]
name = "transaction-cleaning-api"
version = "0.1.0"
description = "Rule-driven CSV data cleaning API with audit logging"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "python-dateutil",
    "jinja2",
    "python-multipart",
    "pytest",
    "httpx
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
